# psmon

./: .gitignore  .travis.yml  README.md  appveyor.yml  pyproject.toml
psmon/: __init__.py  base.py  main.py  process.py  utils.py
psmon/limiters/: __init__.py  base.py  cpu_times.py  max_memory.py  wall_time.py
tests/: test_core.py  test_memory.py  test_time.py
tests/_gadgets/: cpu_time_consumer.py  memory_consumer.py  surviving_sigterm.py
tests/_programs/: child_cpu_time_1.sh  child_cpu_time_2.sh  child_memory.sh  sigterm_echo.sh
