[tool.poetry]
name = "psmon"
version = "0.1.0"
description = "Process monitoring"
authors = ["Rakha Kanz Kautsar <rkkautsar@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
psutil = "^5.5"

[tool.poetry.dev-dependencies]
pylint = "^2.3"
black = "=18.9b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
