[tool.poetry]
name = "psmon"
version = "1.1.1"
description = "Process monitoring"
authors = ["Rakha Kanz Kautsar <rkkautsar@gmail.com>"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/rkkautsar/psmon"
homepage = "https://github.com/rkkautsar/psmon"

[tool.poetry.dependencies]
python = ">=3.6"
psutil = "^5.5"
loguru = "^0.2.5"

[tool.poetry.dev-dependencies]
pylint = "^2.3"
black = "=19.3b0"
pytest = "^4.3"
pytest-parallel = "^0.0.9"
pytest-cov = "^2.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
